# muzo1.0

./: .gitignore  Cargo.toml  MANUELINSTALL.MD  README.MD  components.json  eslint.config.mjs  index.html  install.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  update.js  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  cli-app-request.md
.github/workflows/: node.js.yml  nodebuild.js.yml  tauri-build.yml
electron/: preload.ts  tsconfig.json
packaging/aur/: .SRCINFO  PKGBUILD
packaging/flatpak/: cargo-sources.json  generated-sources.json  net.mediaharbor.MediaHarbor.yml  org.mediaharbor.MediaHarbor.desktop  org.mediaharbor.MediaHarbor.metainfo.xml  org.mediaharbor.MediaHarbor.yml
packaging/snap/: README.md  snapcraft.yaml
packaging/windows/: AppxManifest.xml
patches/: vite-react-ssg+0.9.1-beta.1.patch
resources/: mediaharbor.apparmor  postinst.sh
scripts/: derive_prefetch_key.js  patch-librespot.js
snap/: snapcraft.yaml
src/: App.tsx  firststart.css  main.js  main.tsx  preload.js  start.py  style.css  tauri-bridge.ts  vite-env.d.ts
src/app/: Cargo.toml  tauri.conf.json
src/app/capabilities/: default.json
src/app/icons/: icon.icns
src/app/src/: main.rs
src/components/: BarVisualizer.tsx  ErrorBoundary.tsx  LyricsView.tsx  NowPlaying.tsx  Player.tsx  QualitySelector.tsx  RadialVisualizer.tsx
src/core/: Cargo.toml  build.rs
src/core/src/: defaults.rs  download_order.rs  errors.rs  fetchers.rs  http_client.rs  ipc_contract.rs  lib.rs  logger.rs  orpheus.rs  sandbox.rs  settings.rs  streaming_server.rs  subprocess.rs  update_checker.rs  venv_manager.rs
src/core/src/apis/: apple_music_api.rs  apple_music_service.rs  credentials.rs  deezer_api.rs  librespot_service.rs  mod.rs  qobuz_api.rs  spotify_api.rs  tidal_api.rs  yt_audio_stream.rs  yt_search_api.rs  ytmusic_search_api.rs
src/core/src/crypto/: deezer.rs  mod.rs  mp4decrypt.rs  playplay.rs  spotify.rs  tidal.rs
src/core/src/downloads/: gamrip.rs  mod.rs  yt_dlp.rs
src/core/src/installers/: bento4.rs  ffmpeg.rs  git.rs  mod.rs  python.rs
src/core/src/media/: file_discovery.rs  file_watcher.rs  mod.rs  scanner.rs
src/core/src/meta/: apple_music_meta.rs  mod.rs  spotify_meta.rs
src/core/src/re_unplayplay/: wrapper.cpp
src/core/src/streamrip/: converter.rs  deezer_client.rs  downloader.rs  mod.rs  orchestrator.rs  qobuz_client.rs  tagger.rs  tidal_client.rs
src/funcs/: appleMusicMeta.js  customRip.js  db.js  defaults.js  downloadorder.js  downloadsHandlers.js  fetchers.js  fileDiscoveryWorker.js  fileWatcher.js  gamRip.js  library.js  logger.js  mediaScanner.js  settings.js  spotifyMeta.js  updatechecker.js  venvManager.js  yt_dlp_downloaders.js
src/hooks/: useDownloadEvents.ts  useKeyboardShortcuts.ts  useMediaSyncLoop.ts  useMusicSuggestions.ts
tests/: spotify-librespot-search.test.js  spotify-podcast-rss-fallback.test.js  spotify-search-api.test.js  spotify-show-audiobook-details.test.js
(+93 files in other folders)
