[package]
name = "mediaharbor"
version = "2.0.4"
edition = "2021"
description = "MediaHarbor desktop application"
default-run = "mediaharbor"

[[bin]]
name = "mediaharbor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mediaharbor-core = { path = "../core" }

tauri = { version = "2", features = ["protocol-asset", "custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
